Lots of scripts, docs, issue templates, and so on. Version / dependency issues are making me lose my mind right now, so it doesn't actually work yet

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -2,17 +2,24 @@ name: Validate
 
 on:
   push:
+    branches:
+      - "main"
   pull_request:
+    branches:
+      - "main"
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
   validate-hacs:
+    name: "HACS Validation"
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v3"
       - name: HACS validation
         uses: "hacs/action@main"
         with:
-          category: "integration!"
+          category: "integration"
+          # Remove this 'ignore' key when we have added brand images for our integration to https://github.com/home-assistant/brands
+          ignore: "brands"
