Add hassfest validation

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -2,11 +2,7 @@ name: Validate
 
 on:
   push:
-    branches:
-      - "main"
   pull_request:
-    branches:
-      - "main"
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
@@ -23,3 +19,10 @@ jobs:
           category: "integration"
           # Remove this 'ignore' key when we have added brand images for our integration to https://github.com/home-assistant/brands
           ignore: "brands"
+
+  validate-hassfest:
+    name: "Hassfest Validation"
+    runs-on: "ubuntu-latest"
+    steps:
+        - uses: "actions/checkout@v4"
+        - uses: "home-assistant/actions/hassfest@master"
