--- a/custom_components/lucidmotors/manifest.json
+++ b/custom_components/lucidmotors/manifest.json
@@ -5,13 +5,13 @@
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://www.home-assistant.io/integrations/lucidmotors",
-  "issue_tracker": "https://github.com/borski/hacs-lucidmotors/issues",
   "homekit": {},
   "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/borski/hacs-lucidmotors/issues",
   "requirements": [
     "lucidmotors==0.1.1"
   ],
   "ssdp": [],
-  "zeroconf": [],
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "zeroconf": []
 }
