--- a/custom_components/lucidmotors/manifest.json
+++ b/custom_components/lucidmotors/manifest.json
@@ -4,15 +4,15 @@
   "codeowners": ["@nshp, @borski"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://www.home-assistant.io/integrations/lucidmotors",
+  "documentation": "https://github.com/borski/ha-lucidmotors",
   "homekit": {},
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/borski/ha-lucidmotors/issues",
   "requirements": [
-    "lucidmotors==1.1.12",
+    "lucidmotors==1.2.0",
     "markdownify==0.11.6"
   ],
   "ssdp": [],
-  "version": "1.0.11",
+  "version": "1.1.0",
   "zeroconf": []
 }
